--- a/Frismart/Resources/Views/TopCategoryView.xib
+++ b/Frismart/Resources/Views/TopCategoryView.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nqK-uH-w5P">
-                    <rect key="frame" x="0.0" y="0.0" width="257" height="139"/>
+                    <rect key="frame" x="20" y="20" width="217" height="99"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5w-5l-oks">
                     <rect key="frame" x="20" y="20" width="217" height="99"/>
@@ -36,12 +36,12 @@
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="nqK-uH-w5P" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7E5-Fa-kQD"/>
+                <constraint firstItem="nqK-uH-w5P" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="7E5-Fa-kQD"/>
                 <constraint firstAttribute="trailing" secondItem="l4h-zv-2Nh" secondAttribute="trailing" constant="21" id="Hcn-Wl-9Un"/>
-                <constraint firstItem="nqK-uH-w5P" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Vj0-Tn-dFA"/>
+                <constraint firstItem="nqK-uH-w5P" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Vj0-Tn-dFA"/>
                 <constraint firstItem="l4h-zv-2Nh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="21" id="j1R-fx-QZh"/>
-                <constraint firstAttribute="bottom" secondItem="nqK-uH-w5P" secondAttribute="bottom" id="lEo-al-LM7"/>
-                <constraint firstAttribute="trailing" secondItem="nqK-uH-w5P" secondAttribute="trailing" id="qjO-7G-aZ5"/>
+                <constraint firstAttribute="bottom" secondItem="nqK-uH-w5P" secondAttribute="bottom" constant="20" id="lEo-al-LM7"/>
+                <constraint firstAttribute="trailing" secondItem="nqK-uH-w5P" secondAttribute="trailing" constant="20" id="qjO-7G-aZ5"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
