--- a/Frismart/Resources/Views/TopStoreView.xib
+++ b/Frismart/Resources/Views/TopStoreView.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Exo2-ExtraLight.ttf">
@@ -19,61 +20,56 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopStoreView" customModule="Frismart" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="325" height="348"/>
+            <rect key="frame" x="0.0" y="0.0" width="325" height="308"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3i-aT-LdB">
-                    <rect key="frame" x="10" y="5" width="305" height="244"/>
+                    <rect key="frame" x="10" y="5" width="305" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="323" id="7kx-La-sDI"/>
-                        <constraint firstAttribute="height" constant="244" id="JcF-7c-LPH"/>
+                        <constraint firstAttribute="width" secondItem="d3i-aT-LdB" secondAttribute="height" multiplier="61:40" id="W4k-21-h0n"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waz Burger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hP9-vm-UxO">
-                    <rect key="frame" x="16" y="253" width="128" height="32"/>
+                    <rect key="frame" x="16" y="205" width="293" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="294" id="3sY-ey-lXf"/>
-                        <constraint firstAttribute="height" constant="32" id="Vu6-ta-tct"/>
+                        <constraint firstAttribute="height" constant="32" id="BA2-92-SJH"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="24"/>
                     <color key="textColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYz-LF-PH6">
-                    <rect key="frame" x="16" y="285" width="60" height="36"/>
+                    <rect key="frame" x="16" y="237" width="60" height="36"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="60" id="Lu8-jQ-ulT"/>
-                        <constraint firstAttribute="width" constant="60" id="jc3-st-QXv"/>
-                        <constraint firstAttribute="height" constant="35.5" id="lWa-OE-krQ"/>
+                        <constraint firstAttribute="height" constant="36" id="3H4-x5-WiP"/>
+                        <constraint firstAttribute="width" constant="60" id="zy0-AA-cnK"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Exo2-Light" family="Exo 2" pointSize="40"/>
                     <color key="textColor" red="0.98431372549999996" green="0.68235294120000001" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Libreville - 347 Hits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cc-Xo-Ho3">
-                    <rect key="frame" x="16" y="321" width="103" height="21"/>
+                    <rect key="frame" x="16" y="273" width="153" height="21"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="197" id="R8g-K0-xh7"/>
-                        <constraint firstAttribute="height" constant="21" id="eiu-OY-gGH"/>
+                        <constraint firstAttribute="height" constant="21" id="Gx0-ZR-z9h"/>
+                        <constraint firstAttribute="width" constant="153" id="K8L-dj-zab"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Exo2-ExtraLight" family="Exo 2" pointSize="12"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-XA-86g">
-                    <rect key="frame" x="285" y="317" width="25" height="25"/>
+                    <rect key="frame" x="285" y="269" width="25" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="25" id="jxF-0t-y6m"/>
-                        <constraint firstAttribute="height" constant="25" id="rHl-MB-opR"/>
+                        <constraint firstAttribute="height" constant="25" id="L6I-MU-yxa"/>
+                        <constraint firstAttribute="width" constant="25" id="SCS-82-5n6"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOS-N5-vbZ" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
-                    <rect key="frame" x="76" y="291" width="80" height="16"/>
+                    <rect key="frame" x="78" y="239" width="91" height="26"/>
                     <constraints>
-                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="16" id="4Ps-a5-e0b"/>
-                        <constraint firstAttribute="height" constant="16" id="4gO-OH-VJ8"/>
-                        <constraint firstAttribute="width" constant="80" id="DId-m9-NXl"/>
-                        <constraint firstAttribute="width" constant="80" id="LzW-5P-rd8"/>
+                        <constraint firstAttribute="width" constant="91" id="J47-HJ-ycr"/>
+                        <constraint firstAttribute="height" constant="26" id="irS-Qy-sgM"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="StoreDetails_ReviewStar_Unchecked"/>
@@ -89,36 +85,26 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-SA-LBW">
-                    <rect key="frame" x="25" y="20" width="275" height="226"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-SA-LBW">
+                    <rect key="frame" x="25" y="20" width="275" height="193"/>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" constant="0.5" id="03f-9I-8Bo"/>
-                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="6" id="0kl-7h-rNg"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="4aR-Hl-im1"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="8vy-hZ-ht4"/>
-                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" constant="102" id="9xG-9x-zA4"/>
-                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="6" id="Be9-KE-GeH"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="DyP-Zq-6gz"/>
-                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="10" id="GZ7-Km-Wc4"/>
-                <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" id="LHN-XR-kka"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="LOO-Xn-gkc"/>
-                <constraint firstAttribute="bottom" secondItem="4Fl-SA-LBW" secondAttribute="bottom" constant="102" id="LnF-dq-Hfl"/>
-                <constraint firstAttribute="bottom" secondItem="4cc-Xo-Ho3" secondAttribute="bottom" constant="6" id="Ov0-6U-aWJ"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="PO0-rr-tIr"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Qcq-rs-4ah"/>
-                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" constant="25" id="bCH-qG-TU8"/>
-                <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" id="eeI-BH-56W"/>
-                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="15" id="eu3-cz-NR4"/>
-                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" constant="25" id="f2U-el-MFO"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="4" id="fuy-Uh-Fhv"/>
-                <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="kAm-Mx-rxa"/>
-                <constraint firstItem="iM0-XA-86g" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="32" id="ocj-s1-06g"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="q5I-GP-mfu"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="nOS-N5-vbZ" secondAttribute="bottom" constant="14" id="sdu-b9-ehU"/>
-                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="vos-g9-aWB"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="0wO-4k-O0W"/>
+                <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="2ch-1K-YZj"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="980-1P-KDO"/>
+                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="10" id="9dn-Hd-QXk"/>
+                <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" constant="2" id="DwA-QR-IEK"/>
+                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="15" id="FnO-cS-HCs"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="I7a-RN-PSE"/>
+                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="14" id="RxF-8K-QGc"/>
+                <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" id="Ths-V8-24j"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" id="Uvw-jb-NJa"/>
+                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="2" id="b0m-fR-1qH"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" id="dbu-uB-LUN"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="g7j-4v-bQo"/>
+                <constraint firstAttribute="trailing" secondItem="hP9-vm-UxO" secondAttribute="trailing" constant="16" id="wNC-MI-JbL"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -131,7 +117,7 @@
                 <outlet property="storeNameLabel" destination="hP9-vm-UxO" id="1Yi-he-QfD"/>
                 <outlet property="storeRateLabel" destination="RYz-LF-PH6" id="JU4-7v-DMq"/>
             </connections>
-            <point key="canvasLocation" x="254.5" y="200"/>
+            <point key="canvasLocation" x="254.5" y="180"/>
         </view>
     </objects>
     <resources>
