--- a/Frismart/Resources/Views/TopStoreView.xib
+++ b/Frismart/Resources/Views/TopStoreView.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="Exo2-ExtraLight.ttf">
@@ -20,17 +19,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopStoreView" customModule="Frismart" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="325" height="308"/>
+            <rect key="frame" x="0.0" y="0.0" width="325" height="289"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3i-aT-LdB">
-                    <rect key="frame" x="10" y="5" width="305" height="200"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="d3i-aT-LdB" secondAttribute="height" multiplier="61:40" id="W4k-21-h0n"/>
-                    </constraints>
+                    <rect key="frame" x="10" y="5" width="305" height="175"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waz Burger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hP9-vm-UxO">
-                    <rect key="frame" x="16" y="205" width="293" height="32"/>
+                    <rect key="frame" x="16" y="181" width="293" height="32"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="BA2-92-SJH"/>
                     </constraints>
@@ -39,7 +35,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYz-LF-PH6">
-                    <rect key="frame" x="16" y="237" width="60" height="36"/>
+                    <rect key="frame" x="16" y="213" width="60" height="36"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="36" id="3H4-x5-WiP"/>
                         <constraint firstAttribute="width" constant="60" id="zy0-AA-cnK"/>
@@ -49,24 +45,24 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Libreville - 347 Hits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cc-Xo-Ho3">
-                    <rect key="frame" x="16" y="273" width="153" height="21"/>
+                    <rect key="frame" x="16" y="255" width="261" height="21"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="21" id="Gx0-ZR-z9h"/>
-                        <constraint firstAttribute="width" constant="153" id="K8L-dj-zab"/>
+                        <constraint firstAttribute="width" constant="261" id="3Ih-Tj-TWz"/>
+                        <constraint firstAttribute="height" constant="21" id="AKH-GU-AHr"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Exo2-ExtraLight" family="Exo 2" pointSize="12"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-XA-86g">
-                    <rect key="frame" x="285" y="269" width="25" height="25"/>
+                    <rect key="frame" x="285" y="253" width="25" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="L6I-MU-yxa"/>
-                        <constraint firstAttribute="width" constant="25" id="SCS-82-5n6"/>
+                        <constraint firstAttribute="height" constant="25" id="T2S-zO-jkS"/>
+                        <constraint firstAttribute="width" constant="25" id="Xgi-07-aJX"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOS-N5-vbZ" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
-                    <rect key="frame" x="78" y="239" width="91" height="26"/>
+                    <rect key="frame" x="78" y="213" width="91" height="26"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="91" id="J47-HJ-ycr"/>
                         <constraint firstAttribute="height" constant="26" id="irS-Qy-sgM"/>
@@ -85,25 +81,32 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-SA-LBW">
-                    <rect key="frame" x="25" y="20" width="275" height="193"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-SA-LBW">
+                    <rect key="frame" x="25" y="10" width="275" height="165"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="165" id="Dgv-jo-f6t"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="4cc-Xo-Ho3" secondAttribute="bottom" constant="13" id="0tV-65-3Ko"/>
                 <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="0wO-4k-O0W"/>
                 <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="2ch-1K-YZj"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="980-1P-KDO"/>
-                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="10" id="9dn-Hd-QXk"/>
+                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="11" id="5LM-E6-HAw"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="1" id="5QF-Jj-fPn"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="7lF-6N-sNC"/>
                 <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" constant="2" id="DwA-QR-IEK"/>
-                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="15" id="FnO-cS-HCs"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="I7a-RN-PSE"/>
-                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="14" id="RxF-8K-QGc"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="ECW-75-mzI"/>
+                <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="GCo-56-Tf9"/>
+                <constraint firstAttribute="trailing" secondItem="4Fl-SA-LBW" secondAttribute="trailing" constant="25" id="Mc3-mg-xk9"/>
+                <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" constant="10" id="Scl-SQ-4fn"/>
                 <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" id="Ths-V8-24j"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" id="Uvw-jb-NJa"/>
-                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="2" id="b0m-fR-1qH"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" id="dbu-uB-LUN"/>
-                <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="g7j-4v-bQo"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="WEQ-tR-po2"/>
+                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="15" id="XtI-qQ-VCU"/>
+                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" id="b0m-fR-1qH"/>
+                <constraint firstItem="4Fl-SA-LBW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="j3r-e1-TqW"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" constant="6" id="wGn-CA-yeo"/>
                 <constraint firstAttribute="trailing" secondItem="hP9-vm-UxO" secondAttribute="trailing" constant="16" id="wNC-MI-JbL"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -117,7 +120,7 @@
                 <outlet property="storeNameLabel" destination="hP9-vm-UxO" id="1Yi-he-QfD"/>
                 <outlet property="storeRateLabel" destination="RYz-LF-PH6" id="JU4-7v-DMq"/>
             </connections>
-            <point key="canvasLocation" x="254.5" y="180"/>
+            <point key="canvasLocation" x="254.5" y="170.5"/>
         </view>
     </objects>
     <resources>
