--- a/Frismart/Resources/Views/Iphone5TopStoreView.xib
+++ b/Frismart/Resources/Views/Iphone5TopStoreView.xib
@@ -19,46 +19,60 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopStoreView" customModule="Frismart" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="291"/>
+            <rect key="frame" x="0.0" y="0.0" width="250" height="292"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3i-aT-LdB">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+                    <rect key="frame" x="0.0" y="0.0" width="250" height="80"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waz Burger" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hP9-vm-UxO">
-                    <rect key="frame" x="8" y="181" width="304" height="32"/>
+                    <rect key="frame" x="5" y="79" width="242" height="22"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="32" id="BA2-92-SJH"/>
+                        <constraint firstAttribute="height" constant="22" id="BA2-92-SJH"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="24"/>
+                    <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="18"/>
                     <color key="textColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RYz-LF-PH6">
-                    <rect key="frame" x="9" y="216" width="60" height="36"/>
+                    <rect key="frame" x="6" y="102" width="40" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="3H4-x5-WiP"/>
-                        <constraint firstAttribute="width" constant="60" id="zy0-AA-cnK"/>
+                        <constraint firstAttribute="height" constant="30" id="3H4-x5-WiP"/>
+                        <constraint firstAttribute="width" constant="40" id="zy0-AA-cnK"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Exo2-Light" family="Exo 2" pointSize="40"/>
+                    <fontDescription key="fontDescription" name="Exo2-Light" family="Exo 2" pointSize="24"/>
                     <color key="textColor" red="0.98431372549999996" green="0.68235294120000001" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Libreville - 347 Hits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4cc-Xo-Ho3">
-                    <rect key="frame" x="9" y="259" width="204" height="21"/>
+                    <rect key="frame" x="8" y="135" width="200" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="204" id="3Ih-Tj-TWz"/>
-                        <constraint firstAttribute="height" constant="21" id="AKH-GU-AHr"/>
+                        <constraint firstAttribute="width" constant="200" id="3Ih-Tj-TWz"/>
+                        <constraint firstAttribute="height" constant="20" id="AKH-GU-AHr"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Exo2-ExtraLight" family="Exo 2" pointSize="12"/>
+                    <fontDescription key="fontDescription" name="Exo2-ExtraLight" family="Exo 2" pointSize="13"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOS-N5-vbZ" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
-                    <rect key="frame" x="71" y="221" width="91" height="26"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-XA-86g">
+                    <rect key="frame" x="225" y="134" width="22" height="22"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="91" id="J47-HJ-ycr"/>
-                        <constraint firstAttribute="height" constant="26" id="irS-Qy-sgM"/>
+                        <constraint firstAttribute="height" constant="22" id="T2S-zO-jkS"/>
+                        <constraint firstAttribute="width" constant="22" id="Xgi-07-aJX"/>
+                    </constraints>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o6d-T8-MsN">
+                    <rect key="frame" x="0.0" y="159" width="250" height="2"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="8Bk-HN-iDT"/>
+                    </constraints>
+                </view>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nOS-N5-vbZ" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
+                    <rect key="frame" x="52" y="105" width="74" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="74" id="J47-HJ-ycr"/>
+                        <constraint firstAttribute="height" constant="24" id="irS-Qy-sgM"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="StoreDetails_ReviewStar_Unchecked"/>
@@ -74,35 +88,32 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iM0-XA-86g">
-                    <rect key="frame" x="285" y="257" width="25" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="T2S-zO-jkS"/>
-                        <constraint firstAttribute="width" constant="25" id="Xgi-07-aJX"/>
-                    </constraints>
-                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.96862745100000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="4cc-Xo-Ho3" secondAttribute="bottom" constant="11" id="0tV-65-3Ko"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="0wO-4k-O0W"/>
-                <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="2ch-1K-YZj"/>
-                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="9" id="5LM-E6-HAw"/>
-                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="6" id="5QF-Jj-fPn"/>
+                <constraint firstAttribute="bottom" secondItem="4cc-Xo-Ho3" secondAttribute="bottom" constant="137" id="0tV-65-3Ko"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="0wO-4k-O0W"/>
+                <constraint firstItem="RYz-LF-PH6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="2ch-1K-YZj"/>
+                <constraint firstAttribute="bottom" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="136" id="5LM-E6-HAw"/>
+                <constraint firstItem="hP9-vm-UxO" firstAttribute="top" secondItem="d3i-aT-LdB" secondAttribute="bottom" constant="-1" id="5QF-Jj-fPn"/>
                 <constraint firstItem="d3i-aT-LdB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7lF-6N-sNC"/>
-                <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" constant="2" id="DwA-QR-IEK"/>
+                <constraint firstItem="nOS-N5-vbZ" firstAttribute="leading" secondItem="RYz-LF-PH6" secondAttribute="trailing" constant="6" id="DwA-QR-IEK"/>
                 <constraint firstItem="d3i-aT-LdB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GCo-56-Tf9"/>
+                <constraint firstItem="o6d-T8-MsN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="JKa-d6-iSb"/>
+                <constraint firstAttribute="trailing" secondItem="o6d-T8-MsN" secondAttribute="trailing" id="JlM-G7-FQe"/>
                 <constraint firstAttribute="trailing" secondItem="d3i-aT-LdB" secondAttribute="trailing" id="Scl-SQ-4fn"/>
-                <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="3" id="Ths-V8-24j"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="WEQ-tR-po2"/>
-                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="10" id="XtI-qQ-VCU"/>
-                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="8" id="b0m-fR-1qH"/>
-                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" constant="7" id="wGn-CA-yeo"/>
-                <constraint firstAttribute="trailing" secondItem="hP9-vm-UxO" secondAttribute="trailing" constant="8" id="wNC-MI-JbL"/>
+                <constraint firstItem="RYz-LF-PH6" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="1" id="Ths-V8-24j"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="WEQ-tR-po2"/>
+                <constraint firstAttribute="trailing" secondItem="iM0-XA-86g" secondAttribute="trailing" constant="3" id="XtI-qQ-VCU"/>
+                <constraint firstItem="nOS-N5-vbZ" firstAttribute="top" secondItem="hP9-vm-UxO" secondAttribute="bottom" constant="4" id="b0m-fR-1qH"/>
+                <constraint firstItem="o6d-T8-MsN" firstAttribute="top" secondItem="iM0-XA-86g" secondAttribute="bottom" constant="3" id="sf9-Ha-kew"/>
+                <constraint firstItem="4cc-Xo-Ho3" firstAttribute="top" secondItem="RYz-LF-PH6" secondAttribute="bottom" constant="3" id="wGn-CA-yeo"/>
+                <constraint firstAttribute="trailing" secondItem="hP9-vm-UxO" secondAttribute="trailing" constant="3" id="wNC-MI-JbL"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="bottomView" destination="o6d-T8-MsN" id="Nkz-W4-Lga"/>
                 <outlet property="favoriteImageView" destination="iM0-XA-86g" id="5cq-uo-7oI"/>
                 <outlet property="floatRatingView" destination="nOS-N5-vbZ" id="U8p-mT-Pkr"/>
                 <outlet property="storeAddressLabel" destination="4cc-Xo-Ho3" id="uEz-4w-rc6"/>
@@ -110,7 +121,7 @@
                 <outlet property="storeNameLabel" destination="hP9-vm-UxO" id="1Yi-he-QfD"/>
                 <outlet property="storeRateLabel" destination="RYz-LF-PH6" id="JU4-7v-DMq"/>
             </connections>
-            <point key="canvasLocation" x="234" y="171.5"/>
+            <point key="canvasLocation" x="181" y="173"/>
         </view>
     </objects>
     <resources>
